progress on intro and sec 2

--- a/icwe19.bib
+++ b/icwe19.bib
@@ -1,3 +1,90 @@
+@inproceedings{Pal2011,
+	abstract = {Content in microblogging systems such as Twitter is produced by tens to hundreds of millions of users. This diversity is a notable strength, but also presents the challenge of finding the most interesting and authoritative authors for any given topic. To address this, we first propose a set of features for characterizing social media authors, including both nodal and topical metrics. We then show how probabilistic clustering over this feature space, followed by a within-cluster ranking procedure, can yield a final list of top authors for a given topic. We present results across several topics, along with results from a user study confirming that our method finds authors who are significantly more interesting and authoritative than those resulting from several baseline conditions. Additionally our algorithm is computationally feasible in near real-time scenarios making it an attractive alternative for capturing the rapidly changing dynamics of microblogs.},
+	author = {Pal, Aditya and Counts, Scott},
+	booktitle = {Proceedings of the fourth ACM international conference on Web search and data mining - WSDM '11},
+	doi = {10.1145/1935826.1935843},
+	isbn = {9781450304931},
+	issn = {01603477},
+	keywords = {{\#}dengue,{\#}zika},
+	mendeley-tags = {{\#}dengue,{\#}zika},
+	title = {{Identifying topical authorities in microblogs}},
+	year = {2011}
+}
+
+
+@inproceedings{Missier2017,
+	address = {Roma, Italy},
+	author = {Missier, Paolo and McClean, Callum and Carlton, Jonathan and Cedrim, Diego and Silva, Leonardo and Garcia, Alessandro and Plastino, Alexandre and Romanovsky, Alexander},
+	booktitle = {Web Engineering: 17th International Conference, ICWE 2017, Rome, Italy, June 5-8, 2017, Proceedings},
+	doi = {10.1007/978-3-319-60131-1\_30},
+	editor = {Cabot, Jordi and {De Virgilio}, Roberto and Torlone, Riccardo},
+	file = {:Users/npm65/Library/Application Support/Mendeley Desktop/Downloaded/Missier et al. - 2017 - Recruiting from the Network Discovering Twitter Users Who Can Help Combat Zika Epidemics(2).pdf:pdf},
+	isbn = {978-3-319-60131-1},
+	pages = {437--445},
+	publisher = {Springer International Publishing},
+	title = {{Recruiting from the Network: Discovering Twitter Users Who Can Help Combat Zika Epidemics}},
+	url = {http://dx.doi.org/10.1007/978-3-319-60131-1{\_}30},
+	year = {2017}
+}
+
+@article{Sousa2018,
+	abstract = {{\textcopyright} 2018 Dengue is a disease transmitted by the Aedes Aegypti mosquito, which also transmits the Zika virus and Chikungunya. Unfortunately, the population of different countries has been suffering from the diseases transmitted by this mosquito. The communities should play an important role in combating and preventing the mosquito-borne diseases. However, due to the limited engagement of the population, new solutions need to be used to strengthen the mosquito surveillance. VazaDengue is one of these solutions, which offers the users a web and mobile platform for preventing and combating mosquito-borne diseases. The system relies on social actions of citizens reporting mosquito breeding sites and dengue cases, in which the reports are made available to the community and health agencies. In order to address the limited population engagement, the system proactively monitors social media network as Twitter to enrich the information provided by the system. It processes the natural language text from the network to classify the tweets according to a set of predefined categories. After the classification, the relevant tweets are provided to the users as reports. In this paper, we describe the VazaDengue features including its ability to harvest and classify tweets. Since the VazaDengue system aims to strengthen the entomological surveillance of the mosquito that transmits Dengue, Zika, and Chikungunya by providing geolocated reports, we present here two studies to evaluate its potential contributions. The first evaluation uses a survey conducted in the Brazilian community of health agents. The goal is to evaluate the relevance of the classified tweets according to the health agents' perspective. The second study compares the official reports of the 2015–2016 epidemic waves in Brazil with the concentration of mosquito-related tweets found by VazaDengue. The goal is to verify if the concentration of tweets can be used for monitoring the mosquito manifestation in big cities. The results of these two evaluations are encouraging. For instance, we have found that the health agents tend to agree with the relevance of the classified tweets. Moreover, the concentration of tweets is likely to be effective for monitoring big cities. The results of these evaluations are helping us to improve the VazaDengue system further. These improvements will make the VazaDengue system even more useful for combating and preventing the mosquito-borne diseases.},
+	author = {Sousa, L. and de Mello, R. and Cedrim, D. and Garcia, A. and Missier, P. and Uch{\^{o}}a, A. and Oliveira, A. and Romanovsky, A.},
+	doi = {10.1016/j.is.2018.02.003},
+	issn = {03064379},
+	journal = {Information Systems},
+	keywords = {Dengue,Mosquito,Social media,Surveillance,Tweets},
+	title = {{VazaDengue: An information system for preventing and combating mosquito-borne diseases with social networks}},
+	volume = {75},
+	year = {2018}
+}
+
+
+@inproceedings{Bizid:2015:PUD:2808797.2809411,
+	address = {New York, NY, USA},
+	author = {Bizid, Imen and Nayef, Nibal and Boursier, Patrice and Faiz, Sami and Morcos, Jacques},
+	booktitle = {Proceedings of the 2015 IEEE/ACM International Conference on Advances in Social Networks Analysis and Mining 2015},
+	doi = {10.1145/2808797.2809411},
+	isbn = {978-1-4503-3854-7},
+	keywords = {Events in Twitter,Key user identification,On- and off-topic features,Real-time feature computation,SVM Classification and Ranking},
+	pages = {500--503},
+	publisher = {ACM},
+	series = {ASONAM '15},
+	title = {{Prominent Users Detection During Specific Events by Learning On- and Off-topic Features of User Activities}},
+	url = {http://doi.acm.org/10.1145/2808797.2809411},
+	year = {2015}
+}
+
+@article{IJoC1246,
+	author = {Gilad Lotan and Erhardt Graeff and Mike Ananny and Devin Gaffney and Ian Pearce and danah boyd},
+	title = {The Arab Spring| The Revolutions Were Tweeted: Information Flows during the 2011 Tunisian and Egyptian Revolutions},
+	journal = {International Journal of Communication},
+	volume = {5},
+	number = {0},
+	year = {2011},
+	keywords = {},
+	abstract = {This article details the networked production and dissemination of news on Twitter during snapshots of the 2011 Tunisian and Egyptian Revolutions as seen through information flows—sets of near-duplicate tweets—across activists, bloggers, journalists, mainstream media outlets, and other engaged participants. We differentiate between these user types and analyze patterns of sourcing and routing information among them. We describe the symbiotic relationship between media outlets and individuals and the distinct roles particular user types appear to play. Using this analysis, we discuss how Twitter plays a key role in amplifying and spreading timely information across the globe.},
+	issn = {1932-8036},	url = {https://ijoc.org/index.php/ijoc/article/view/1246}
+}
+
+
+@article{Hermida2014,
+	author = {Hermida, Alfred and Lewis, Seth C. and Zamith, Rodrigo},
+	doi = {10.1111/jcc4.12074},
+	file = {:Users/npm65/Library/Application Support/Mendeley Desktop/Downloaded/Hermida, Lewis, Zamith - 2014 - Sourcing the Arab Spring A Case Study of Andy Carvin's Sources on Twitter During the Tunisian and Egypti.pdf:pdf},
+	issn = {10836101},
+	journal = {Journal of Computer-Mediated Communication},
+	keywords = {10,1111,12074,a social media strategist,andy carvin,arab spring,at npr,carvin,case study on the,doi,during key periods of,egyptian uprisings,gatekeeping,jcc4,journalism,national public radio,s andy carvin on,sourcing,the 2011 tunisian and,this paper presents a,twitter,use of sources by},
+	month = {apr},
+	number = {3},
+	pages = {479--499},
+	title = {{Sourcing the Arab Spring: A Case Study of Andy Carvin's Sources on Twitter During the Tunisian and Egyptian Revolutions}},
+	url = {http://doi.wiley.com/10.1111/jcc4.12074},
+	volume = {19},
+	year = {2014}
+}
+
+
 @article{Overbey2013,
 	abstract = {With the recent explosion in availability and use of internet social media, contentious politics is currently undergoing a shift in nature. This shift has resulted in technologically savvy groups of people that utilize these new communication resources to quickly disseminate ideas, influence, news, plans, and opinions in near real time to interested, physically disconnected communities of interest. Here, we investigate activity on Twitter during the 2011 protests and revolution in Egypt by performing an analysis of the structure of direct communications and developing a model based on these analyses. We first compare the network representing the declared friends and followers with the underlying direct communication network based on mentions and retweets, performing an evaluation using goodness of model fits, and including the appropriateness of scale-free assumptions. We also examine this underlying network with an analysis of common structural tendencies by employing exponential random graph models. The network structure of locally focused Twitter communities surrounding contentious political networks tend to have a relatively high density, and a propensity for mutual, transitive, and k-star structures, suggesting that both diffusion of information and back-and-forth communication take place frequently in such networks. More global Twitter networks possess properties corroborative of scale-freeness; however, even locally bounded networks show an evidence of preferential attachment. Based on these observations, we introduce a model to automatically ascertain prominent Twitter users within networks centered on contentious politics. We employ a form of the alpha centrality, which can capably take into account directionality and exogenous prominence, and has ties to non-conservative diffusion. Results indicate a model successful at automatically identifying users that are active and prominent within a given community that agrees well with heuristics and is comparable to other similar models. The model also has advantages over others based on its tunability and robustness in the presence of incomplete data.},
 	author = {Overbey, Lucas A and Greco, Benjamin and Paribello, Christopher and Jackson, Terresa},
