--- a/Fantastic-activists.tex
+++ b/Fantastic-activists.tex
@@ -8,7 +8,7 @@
 
 \begin{document}
 %
-\title{Fantastic activists and how to find them\thanks{}}
+\title{Fantastic activists and how to find them\thanks{} \\ \small (not the real title)}
 %
 %\titlerunning{Abbreviated paper title}
 % If the paper title is too long for the running head, you can set
@@ -33,7 +33,7 @@ ABC Institute, Rupert-Karls-University Heidelberg, Heidelberg, Germany\\
 %
 \begin{abstract}
 last to be written
-\keywords{Twitter analytics  \and online user discovery \and online activists \and influencers}
+\keywords{Twitter analytics  \and online user discovery \and online activists \and online influencers \and influence theories}
 \end{abstract}
 %
 
@@ -45,18 +45,20 @@ In this paper we present a generic and customisable software  framework for incr
 
 \subsection{Motivation}  \label{sec:motivation}
 
-Motivation for this work comes from our ongoing effort to  support health officers in tropical countries, specifically in Brasil, in their fight against airborne virus epidemics like Dengue and Zika, which are carried by mosquitoes. Help from community activists is badly needed to supplement the scarse public resources deployed on the ground. Our past work has therefore focused on identifying relevant content on Twitter that may point health authorities directly to mosquito breeding sites~\cite{Sousa2018}, or to users who have expressed interest in those topics~\cite{Missier2017}. 
+Practical motivation for this work comes from our ongoing effort to  support health officers in tropical countries, specifically in Brasil, in their fight against airborne virus epidemics like Dengue and Zika, which are carried by mosquitoes. Help from community activists is badly needed to supplement the scarse public resources deployed on the ground. Our past work has therefore focused on identifying relevant content on Twitter that may point health authorities directly to mosquito breeding sites~\cite{Sousa2018}, or to users who have given some sign of interest in those topics, i.e., by posting relevant content on Twitter~\cite{Missier2017}. 
 
 The approach described in this paper generalises those past efforts, by attempting to discover users who demonstrate an inclination to become engaged in social issues, regardless of specific topics. 
 We refer to this class of users as \textit{activists}.
 The rationale for this approach is that activists who manifest themselves online on a range of social initiatives, may be more sensitive to requests for help on specific issues,  such as controlling tropical epidemics.
 
-To be clear, this work is not about providing a robust definition of online activism, or to prove that online activism translates into actual engagement in the ``real world''.
+To be clear, this work is not about providing a robust definition of online activism, or to demonstrate that online activism translates into actual engagement in the ``real world''.
 %
 Instead, we acknowledge that the notion of activist is not as well formalised in the literature as that of, for example, \textit{influencers}. 
-Thus, we have developed a generic content processing pipeline for repeatedly searching for and ranking Twitter user profiles and collecting a rich set of quantifiable network- and content-based user metrics, which can be customised to target specific users contexts. Context-specific pipelines provide a tool for exploring various concrete definitions of online activism, i.e., by combining the metrics into higher level user features to be used for ranking.
+Thus, we have developed a generic content processing pipeline which can be customised to target specific users contexts. 
+The pipeline repeatedly searches for and ranks Twitter user profiles and collects a rich set of quantifiable network- and content-based user metrics. 
+Thus, once targeted to a topic the pipeline provides a tool for exploring various concrete definitions of user roles, including online activism, i.e., by combining the metrics into higher level user features to be used for ranking.
 
-We begin by arguing for the need for a new discovery process for this class of users, and then present the framework as our main research contribution.
+We begin by arguing for the need for a new discovery process for this class of users, and then present the pipeline as our main research contribution.
 %
 According to the Cambridge Dictionary, an \textit{activist} is  ``A person who believes strongly in political or social change and takes part in activities such as public protests to try to make this happen''.
 %
@@ -65,7 +67,7 @@ In contrast, we are interested in the fine-grained discovery of activists at the
 Searching for online activists is a realistic goal, as activists presence in social media is widely acknowledged, and it is also clear that social media facilitates activists communication and organization \cite{Poell2014,Youmans2012}.  
 Specific traits that characterise activists include awareness of causes and social topic and the organization of social gatherings and activities, including in emergency situations, by helping organize support efforts and diffusion of useful information.
  
-Informal as it sounds, this characterisation of online activism is different from that of \textit{influencer}.
+Informal as it sounds, this characterisation of online activism is different enough from that of \textit{influencer} to merit its own definition.
 According to ~\cite{Kardara2015}, \textit{influencers are prominent individuals with special characteristics that enable them to	affect a disproportionately large number of their peers with their actions.}
 A large number of metrics and techniques have been proposed to make this generic definition operational~\cite{RIQUELME2016949}. These are mostly based on metrics of network centrality, along with metrics derived from the users' online activity, i.e., number of retweets or other users' content, number of retweets of own content, and many more.
 %
@@ -74,33 +76,36 @@ In contrast, activists are typically low-key, less prominent users who only emer
 %
 While we believe that specific activist behaviour can be characterised using some of the well-tested quantifiable metrics known from the literature  cited above~\cite{RIQUELME2016949}, it should also be clear that the way such metrics are combined to identify activist profiles are not the same as for influencers. 
 
-\subsection{Challenges and contributions}
+\subsection{Challenges}
 
 Motivated by these observations, our search for activists faces a number of challenges.
 %
-Firstly, we note that, given the more subdue nature of activists, it is intuitively more difficult to separate their online footprint from the background noise of general conversations, than it is for an influencer.
+Firstly, we note that, given their potentially  more subdue nature, it is intuitively more difficult to separate their online footprint from the background noise of general conversations, than it is for an influencer.
 Also, interesting activists are by their nature associated to specific topics and manifest their nature in local contexts, for instance as organisers or participants to local events. 
-Finally, we seek evidence of sustained personal engagement over time and across multiple such contexts. 
+Finally, we expect personal engagement to be sustained over time and across multiple such contexts. 
 These observations suggest that the models and algorithms developed for influencers are not immediately applicable, because they mostly operate on global networks, where less prominent users have less of a chance to emerge. 
-Some topic-sensitive metrics and models have been proposed to measure social influence, for example, \textit{alpha centrality}~\cite{Bonacich2001,Overbey2013}, and the \textit{Information Diffusion} model~cite{Pal2011}. Algorithms based on topic models have also been proposed to account for topic specificity~\cite{Zhao2011b}.  However, these approaches are still aimed at measuring influence, not activism. 
+Some topic-sensitive metrics and models have been proposed to measure social influence, for example, \textit{alpha centrality}~\cite{Bonacich2001,Overbey2013}, and the \textit{Information Diffusion} model~\cite{Pal2011}. Algorithms based on topic models have also been proposed to account for topic specificity~\cite{Zhao2011b}.  However, these approaches are still aimed at measuring influence, not activism, and asssume a one-shot discovery process, as opposed to a continuous, incremental approach.
 
-to address these challenges, the approach we propose involves two strategies. 
+\subsection{Approach}
+
+To address these challenges, the approach we propose involves two strategies. 
 Firstly, we first identify suitable contexts that are topic-specific and limited both in time and, optionally, also in space, i.e., regional initiatives, events, or campaigns.
 We then search for users only within these contexts, using a combination of network and content metrics. 
 This follows the intuition that low-key users who produce weak online signal have a better chance to be discovered when the search is localised and then repeated across multiple such contexts.
 By \textit{continuously discovering new contexts} and searching for users engaged in those events and campaigns, we hope to incrementally build up a users' database where users who appear in multiple contexts are progressively more strongly characterised.
 %
-Secondly, to allow experimenting with varying technical definitions of \textit{activist}, we collect a number of network-based and content-based  user profile raw features, and make it available for mining. Concretely, the raw features can be combined into more complex engineered features which in turn can be used to filter and rank users in various ways.
+Secondly, to allow experimenting with varying technical definitions of \textit{activist}, we collect a number of network-based and content-based  user profile raw features, and make it available for mining. The raw features can be combined into more complex engineered features which in turn can be used to filter and rank users in various ways.
 
+\subsection{ Contributions}
 The paper makes the following specific contributions.
 %
 Firstly, we propose a data processing pipeline for harvesting Twitter content and user profiles, based on multiple limited contexts. 
-The pipeline includes community detection and network analysis algorithms aimed at discovering users within such limited contexts, who are characterised by a weaker online signal than the ``global influencers''.
+The pipeline includes community detection and network analysis algorithms aimed at discovering users within such limited contexts.
 
 Secondly, we have implemented a comprehensive set of content-based metrics that result into an ever-growing database of user profile features, which can then be used for mining purposes. 
 User profiles are updated when they are repeatedly found in multiple contexts.
 
-Lastly, for empirical evaluation of our implementation, we demonstrate an operational definition of the activist profile, defined in terms of the features available in the database, using the \hl{XX} as a reference domain for contexts. 
+Lastly, for empirical evaluation of our implementation, we demonstrate an operational definition of the activist profile, defined in terms of the features available in the database, by collecting \hl{XX} users across \hl{YY} contexts in the \hl{XX} domain. 
 \comment{Note that application of the approach to contexts specific to Zika is ongoing and is not reported at this stage of the research}{unless we can do it in time}
 
 
@@ -116,7 +121,7 @@ clarify our evaluation is not based on ground truth}
 \subsection{Related Work}
 
 
-\anote{topic-specific influencers. cite \cite{Schenk2011} SCHENK 2011}
+\anote{topic-specific influencers. cite \cite{Schenk2011} SCHENK 2011}\\
 	
 \anote{\cite{Kardara2015} KARDARA:
 	Here a new ranking algorithm is proposed to find local influencers on Twitter that appear within the context of a specific event being discussed, incorporating the network dynamics as the event evolves with time. 
@@ -127,7 +132,7 @@ clarify our evaluation is not based on ground truth}
 	- this is not who we are looking for.
 	- one single large event
 	- no breakdown into communities
-}
+}\\
 
 
 \anote{\cite{Bizid:2015:PUD:2808797.2809411}  BIZID
