--- a/Fantastic-activists.tex
+++ b/Fantastic-activists.tex
@@ -260,7 +260,7 @@ User interactions within the context are reconstructed using retweet and mention
 Context-independent follower/followee user relationships are also retrieved from Twitter and added to the network as additional user-user edges.
 The size of the network is largely determined by the nature of the context, and may range from a few \hl{XX} users for a small context such as a local awareness event, to \hl{XX} users for a large national event that extends over a long timeframe, such as a political election campaign.
 
-Large networks are further partitioned into communities, using the well-known Daemon community-detection algorithm \cite{DEMON}.
+Large networks are further partitioned into communities, using the well-known Demon community-detection algorithm \cite{DEMON}.
 %
 The goal of this further partitioning is to further narrow the scope and thus to enable weak-signal users to emerge relative to other influencers, who are socially more prominent but, in the context of our work, less interesting.
 Relevance features are then computed for each user within the scope of each community. 
@@ -279,9 +279,29 @@ While the process ends naturally when no new contexts are uncovered from the pre
 
 \anote{this is just a note on how data is collected from Twitter}
 
+\anote{FLAVIO:
+	\begin{itemize}
+	    \item briefly describe this step purpose
+		\item brief description of the twitter api
+		\item how query for each event is composed
+		\item how edges are created (direction and weigths) and resulting network type
+	\end{itemize}
+}
+
 \subsection{Community detection}  \label{sec:communities}
 
-\anote{describe Daemon in summary}
+\anote{describe Demon in summary}
+
+\anote{FLAVIO:
+	\begin{itemize}
+	    \item briefly describe this step purpose
+		\item brief description of community detection concept
+		\item how demon works
+		\item why choose demon: ego-network, multiple communities
+		\item indegree centrality wrt communities
+		\item mention filtering out of users with no community
+	\end{itemize}
+}
 
 \subsection{User selection and ranking}  \label{sec:communities}
 
@@ -292,9 +312,30 @@ While the process ends naturally when no new contexts are uncovered from the pre
 \anote{Then collect user content data for the top-k users, and compute their score using content metrics}
 \anote{explain how each of the three families of metrics is computed -- when, what additional work is needed}
 
+\anote{FLAVIO:
+	\begin{itemize}
+	    \item briefly describe this step purpose
+		\item collection of profile data from each user on twitter
+		\item metrics on collected profile data: follower rank (popularity)
+		
+		\item collection of timeline data during the event from each user on twitter
+		\item metrics on collected timeline data: topical attachment, event focus, topical strength
+		
+		\item apply ranking functions on multiple features
+		\item list possible ranking functions
+	\end{itemize}
+}
+
 \subsection{New context discovery}  \label{sec:context-discovery}
 
 \anote{as mentioned above, this is still manual so not much to say really?}
+
+\anote{FLAVIO:
+	\begin{itemize}
+		\item briefly describe this step purpose
+		\item how context discovery in manually done
+	\end{itemize}
+}
 
 %\noindent Context $C$ $\rightarrow$ all users $U(C)$ \\
 %$U(C)$ $\rightarrow$ retrieve context metrics $\rightarrow$ build context network $N(U(C))$ \\
@@ -309,13 +350,39 @@ While the process ends naturally when no new contexts are uncovered from the pre
 
 \section{Empirical Evaluation: activists} \label{sec:evaluation}
 
-
-
+\anote{FLAVIO:
+	\begin{itemize}
+		\item describe context of choice "UK healthcare campaigns"
+		\item harvesting content and creating context networks
+		\begin{itemize}
+		    \item table of each event harvested together with a description (like on report 10)
+		    \item table for each event describing the related graphs (#nodes, #edges, avg weighted degree)
+		\end{itemize}
+		\item community detection:
+		\begin{itemize}
+		    \item describe the avg # of nodes per community, avg # of edges per community, avg # of users that belongs to more than one community(?)
+		    \item partition qualities avg: internal density, avg degree, FOMD, cut ratio and expansion (chosen because more suitable for overlapping commmunity detection algorithms https://github.com/Lab41/survey-community-detection)
+		\end{itemize}
+		\item User selection and ranking:
+		\begin{itemize}
+		    \item feature 2-3 different ranking functions
+		    \item briefly describe the number inside functions (example: the # of events a user is in, the # of communities a user is in, indegree cetrality)
+		    \item decide over a method for comparison for the functions (list top-k users for each function and look for them over twitter, check how selective are and the diagram wrt #users)
+		\end{itemize}
+		\item new context discovery (?)
+	\end{itemize}
+}
 	
 \section{Discussion and ongoing work}
 
 \anote{
 	we say that events are manually identified. Sketch the events bootstrapping idea.
+}
+
+\anote{FLAVIO:
+	\begin{itemize}
+		\item unsupervised learning?
+	\end{itemize}
 }
 
  \bibliographystyle{splncs04}
